- fix touch causing a blue flash on mobile by disabling text selection

--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,17 @@ body,
     background: ivory;
 }
 
+body {
+    /* Disable text selection */
+    -webkit-touch-callout:none;
+    -webkit-user-select:none;
+    -khtml-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    user-select:none;
+    -webkit-tap-highlight-color:rgba(0,0,0,0);
+}
+
 /* Leva */
 :root {
     --leva-sizes-rootWidth: 400px !important;
